[package]
name = "lwc"
version = "1.0.1"
description = "lines, words, chars, bytes, and directory elements counter"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
rayon = "1.11.0"
walkdir = "2.5.0"
colored = "3.0.0"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
