[package]
name = "lwc"
version = "2.0.0"
description = "lines, words, chars, bytes, and directory elements counter"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
rayon = "1.11.0"
walkdir = "2.5.0"
tabled = "0.20.0"
colored = "3.1.1"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
